[package]
name = "core-quic"
version = "0.1.0"
edition = "2021"

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["core-quiche/fuzzing"]

# Enable qlog support.
qlog = ["core-quiche/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["core-quiche/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["core-quiche/sfv"]

[dependencies]
pluginop = { path = "../pluginop/lib" }
core-quiche = { package="quiche", path = "../core-quiche/quiche" }