[package]
name = "quiche_apps"
version = "0.1.0"
authors = ["Lucas Pardue <lucaspardue.24.7@gmail.com>"]
edition = "2018"
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["core-quic/fuzzing"]

# Enable qlog support.
qlog = ["core-quic/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["core-quic/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["core-quic/sfv"]

default = ["qlog", "sfv"]

[dependencies]
docopt = "1"
env_logger = "0.6"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
log = "0.4"
ring = "0.16"
core-quic = { path = "../core-quic" }
libc = "0.2"
nix = "0"

[lib]
crate-type = ["lib"]
